apps/courses/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use '~@angular/material/theming' as material;
@use 'variables' as *;
@use 'fonts';
@use 'palette';

@use './app/app.component.scss-theme.scss' as app-component;

@use 'cirrus-ui-module' as cirrus-ui;

@import 'cirrus-ui-styles';
@import "~@angular/cdk/overlay-prebuilt.css";

@include app-component.cirrus-app-component($theme);

html,
body {
  overflow-x: hidden;
  overflow-y: hidden;
  height: 100vh;
}

.mat-dialog-content {
  max-height: initial;
}

.overview {           // probably for desktop only
  width: 95%;
  img {
    max-width: 100%;
  }
}

